5.1
 * Add ELAPSED command to cqlsh (CASSANDRA-18861)
 * Add the ability to disable bulk loading of SSTables (CASSANDRA-18781)
 * Clean up obsolete functions and simplify cql_version handling in cqlsh (CASSANDRA-18787)
Merged from 5.0:
 * Change the checksum algorithm SAI-related files use from CRC32 to CRC32C (CASSANDRA-18836)
 * Correctly remove Index.Group from IndexRegistry (CASSANDRA-18905)
 * Fix vector type to support DDM's mask_default function (CASSANDRA-18889)
 * Remove unnecessary reporter-config3 dependency (CASSANDRA-18907)
 * Remove support for empty values on the vector data type (CASSANDRA-18876)
 * Upgrade Dropwizard Metrics to 4.2.19 (CASSANDRA-14667)
 * Upgrade caffeine cache and fix CIDR permissions cache invalidation (CASSANDRA-18805)
 * Remove deprecated properties in CompressionParams (CASSANDRA-18742)
 * Add support for repair coordinator to retry messages that timeout (CASSANDRA-18816)
 * Upgrade slf4j-api to 1.7.36 (CASSANDRA-18882)
 * Make the output of ON/OFF commands in cqlsh consistent (CASSANDRA-18547)
 * Do not create sstable files before registering in txn (CASSANDRA-18737)
 * Remove wrong assertion in SSTableLoader (CASSANDRA-18840)
 * Do not log stacktrace on mismatched cache and schema version and checksum error in AutoSavingCache (CASSANDRA-18862)
 * Remove wrong assertion in SSTableLoader (CASSANDRA-18840)
 * Fix accessing java.nio.Bits.TOTAL_CAPACITY in Java17 (CASSANDRA-18848)
 * Remove metrics-reporter-config dependency (CASSANDRA-18743)
 * Fix SAI's SegmentMetadata min and max primary keys (CASSANDRA-18734)
 * Remove commons-codec dependency (CASSANDRA-18772)
Merged from 4.1:
 * Internode legacy SSL storage port certificate is not hot reloaded on update (CASSANDRA-18681)
 * Nodetool paxos-only repair is no longer incremental (CASSANDRA-18466)
Merged from 4.0:
 * Gossip NPE due to shutdown event corrupting empty statuses (CASSANDRA-18913)
 * Update hdrhistogram to 2.1.12 (CASSANDRA-18893)